syntax = "proto3";
package grpc;
option java_package = "com.aaron.grpc";
option java_outer_classname = "HelloWorldServiceProto";
option java_multiple_files = true;

// 服务端接口类
service HelloWorldService {
    // 服务
    rpc Hello (HelloRequest) returns (HelloResponse) {}
}

// 请求参数
message HelloRequest {
    string req = 1;
}

//响应参数
message HelloResponse {
    string res = 1;
}